--- a/algorithm/demo1.vcxproj
+++ b/algorithm/demo1.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{1677cd91-88d8-4ffb-b2bf-c6ffacd08f47}</ProjectGuid>
     <RootNamespace>demo1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>algorithm</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
